feat(monitoring): 열거 콜백을 페이지 단위로 전환 — 서빙 창 30일 기준 제거
sweepCore의 콜백 계약을 "서빙 창(30일) 커버 시 정확히 1회 + 누적 리스트"에서
"페이지마다 1회 + 그 페이지분만"으로 바꾼다. 수신자가 페이지 단위로 보강·정산을
끝내야 그 페이지가 목록에 뜨기 때문이다(2026-08-13 완결 배치 서빙 스펙 §2).

- 생성자에서 servingWindowDays 제거(12→11), application.yml의 serving-window-days 삭제
- 페이지가 한 장도 처리되지 않으면(태그 0건·즉시 커서 소진) 종료 시 빈 배치로 1회 —
  안 부르면 태그 없는 브랜드가 collecting에 영구히 갇힌다
- 열거 중단 4종·coveredCutoff·touchCrawledDepth는 무변경(기존 테스트로 고정)

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>